kubernetes/apps/morphos/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: morphos
  name: morphos
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: morphos
  type: ClusterIP
